Read NDEF message

--- a/NFCReader/Info.plist
+++ b/NFCReader/Info.plist
@@ -41,5 +41,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NFCReaderUsageDescription</key>
+	<string>NFC tag to read NDEF messages into the application</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Hello world</string>
 </dict>
 </plist>
